--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <!-- <titel>The Basic Language of the web: HTML</titel> -->
+    <link href="style.css" rel="stylesheet" />
+    <titel>The Basic Language of the web: HTML</titel>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
@@ -25,7 +26,9 @@
           height="50"
         />
 
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
         <img
           src="img/post-img.jpg"
           alt="HTML code on screen"
@@ -90,7 +93,7 @@
 
     <aside>
       <h3>Relates Posts</h3>
-      <ul>
+      <ul class="related">
         <li>
           <img
             src="img/related-1.jpg"
@@ -99,7 +102,7 @@
             height="75"
           />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img
@@ -109,7 +112,7 @@
             height="75"
           />
           <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
@@ -119,10 +122,12 @@
             height="75"
           />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
-    <footer>Copyright &copf; 2027 by The Code Magazine</footer>
+    <footer>
+      <p id="copyright">Copyright &copf; 2027 by The Code Magazine</p>
+    </footer>
   </body>
 </html>
